<PreferenceScreen
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
            app:title="@string/server_header">

        <EditTextPreference
                app:key="ip"
                app:title="IP"
                app:defaultValue="127.0.0.1"
                app:useSimpleSummaryProvider="true"/>

        <EditTextPreference
                app:key="port"
                app:title="@string/port"
                android:inputType="number"
                app:defaultValue="8080"
                app:useSimpleSummaryProvider="true"/>

        <EditTextPreference
                app:key="joystick_index"
                app:title="@string/joystick_index"
                android:inputType="number"
                app:defaultValue="1"
                app:useSimpleSummaryProvider="true"/>
    </PreferenceCategory>

    <PreferenceCategory
            app:title="@string/joystick_header">

        <ListPreference
                app:key="joystick_layout"
                app:title="@string/joystick_layout_title"
                app:defaultValue="default_joylayout"
                app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

    <PreferenceCategory
            app:title="@string/appearance_header">
        <ListPreference
                app:key="mode_night"
                app:title="@string/mode_night_title"
                app:entries="@array/yes_no_auto_entries"
                app:entryValues="@array/true_false_null_values"
                app:defaultValue="null"
                app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

    <PreferenceCategory
            app:title="@string/fast_change_header">

        <SwitchPreferenceCompat
                app:key="fast_change"
                app:title="@string/fast_change_title"
                app:useSimpleSummaryProvider="true" />

        <ListPreference
                app:key="secondary_layout"
                app:title="@string/secondary_layout_title"
                app:entries="@array/secondary_layout_entries"
                app:entryValues="@array/secondary_layout_values"
                app:defaultValue="null"
                app:dependency="fast_change"
                app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

</PreferenceScreen>